--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@antfu/eslint-config-monorepo",
+  "name": "@feugene/eslint-config-monorepo",
   "version": "0.38.5",
   "private": true,
   "packageManager": "pnpm@8.3.0",
@@ -13,10 +13,10 @@
     "release": "bumpp -r && pnpm -r publish"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "workspace:*",
+    "@feugene/eslint-config": "workspace:*",
     "bumpp": "^9.1.0",
-    "eslint": "^8.38.0",
-    "eslint-plugin-antfu": "link:./packages/eslint-plugin-antfu",
+    "eslint": "^8.39.0",
+    "eslint-plugin-feugene": "link:packages/eslint-plugin-feugene",
     "rimraf": "^5.0.0",
     "typescript": "^5.0.4"
   }
