--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@antfu/eslint-config",
+  "name": "@feugene/eslint-config",
   "version": "0.38.5",
-  "description": "Anthony's ESLint config",
+  "description": "Feugene ESLint config",
   "author": "Anthony Fu <anthonyfu117@hotmail.com> (https://github.com/antfu/)",
   "license": "MIT",
   "homepage": "https://github.com/antfu/eslint-config",
@@ -16,7 +16,7 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "@antfu/eslint-config-vue": "workspace:*",
+    "@feugene/eslint-config-vue": "workspace:*",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
